--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "sass": "^1.54.8",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
